Add new e2e test (#3)